--- a/warmup.html
+++ b/warmup.html
@@ -26,7 +26,12 @@
     <dt>Puppies</dt>
     <dd>Baby dogs are pretty adorable</dd>
     <dt>Kitties</dt>
-    <dd>Baby cats are even cuter than puppies! (It's the ears)</dd>    
+    <dd>Baby cats are even cuter than puppies! (It's the ears)</dd>   
+    <dt id="fav">Baby elephants</dt>
+    <dd>Baby elephants are the cutest and derpiest animals.</dd>
+    <dd> <img src="http://www.eonline.com/eol_images/Entire_Site/201438/rs_560x415-140408154504-1024.baby-elephant-grass.ls.4814.jpg" alt="a baby elephant" height="200"/> </dd>
+    <dt>This Panda</dt>
+    <dd> <img src="http://bit.ly/1MadBtw" alt="A cute panda" /> </dd>
   </dl>
   
 </body>
