--- a/warmup.html
+++ b/warmup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Warmup</title>
-  <link rel="stylesheet" href="css/warmup.css"></link>
+  <link rel="stylesheet" href="css/warmup.css" />
 </head>
 <body>
 
@@ -11,7 +11,7 @@
   
   <!-- 
     Below is a "descriptive list" (dl). This is like an unordered list (ul), 
-    except it contains pairs of terms (dt) and descriptions (dd)---sort of 
+    except it contains pairs of terms (dt) and descriptions (dd)-sort of 
     like a dictionary.
   
     1. Add a new entry to the below list giving and describing something you
